correct columns on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -107,5 +107,7 @@ body {
 
 .columns {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 15px;
 }
